@@ -1,3 +1,9 @@
+2002-01-11  Patrick Burke  <takhisisii@yahoo.com.au>
+	* conf/*: Added basic comment support to the configuration files using
+	<!-- stuff --> style comments. Currently it's only possible to add them
+	between the <config> ... </config> tags, due to the way it defines the
+	root node.
+
 2002-01-10  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* mapedit/shapeedit.cc: Starting to show shape info.
